chore: local modifications before NimoTech merge
