# api/local_storage/openapi.yaml
@@ -24,13 +24,6 @@ tags:
     description: |-
       Low-level API
 
-  - name: Merge methods
-    description: |-
-      High-level API
-
-  - name: Merge
-    description: |-
-      <SchemaDefinition schemaRef="#/components/schemas/Merge" />
 
   - name: Mount
     description: |-
@@ -39,89 +32,16 @@ tags:
 x-tagGroups:
   - name: Mount
     tags:
-      - Merge methods
       - Mount methods
 
   - name: Schemas
     tags:
-      - Merge
       - Mount
 
 security:
   - access_token: []
 
 paths:
-  /merge:
-    get:
-      summary: Get merges
-      description: |-
-        (TODO)
-      operationId: getMerges
-      tags:
-        - Merge methods
-      parameters:
-        - name: mount_point
-          in: query
-          description: |-
-            Filter the results by mount point
-          schema:
-            type: string
-            example: "/DATA"
-      responses:
-        "200":
-          $ref: "#/components/responses/GetMergesResponseOK"
-        "503":
-          $ref: "#/components/responses/ResponseServiceUnavailable"
-
-    post:
-      summary: Set a merge
-      description: |-
-        (TODO)
-      operationId: setMerge
-      tags:
-        - Merge methods
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Merge"
-      responses:
-        "200":
-          $ref: "#/components/responses/SetMergeResponseOK"
-        "503":
-          $ref: "#/components/responses/ResponseServiceUnavailable"
-  /merge/init:
-    get:
-      summary: Get merge initialization status
-      description: |-
-        (TODO)
-      operationId: getMergeInitStatus
-      tags:
-        - Merge methods
-      responses:
-        "200":
-          $ref: "#/components/responses/GetMergeInitStatusResponseOK"
-        "503":
-          $ref: "#/components/responses/ResponseServiceUnavailable"
-    post:
-      summary: Initialize a merge
-      description: |-
-        (TODO)
-      operationId: initMerge
-      tags:
-        - Merge methods
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/MountPoint"
-      responses:
-        "200":
-          $ref: "#/components/responses/InitMergeResponseOK"
-        "503":
-          $ref: "#/components/responses/ResponseServiceUnavailable"
   /mount:
     get:
       summary: Get mounted volumes
@@ -256,57 +176,6 @@ components:
       name: Authorization
 
   responses:
-    GetMergesResponseOK:
-      description: OK
-      content:
-        application/json:
-          schema:
-            readOnly: true
-            allOf:
-              - $ref: "#/components/schemas/BaseResponse"
-              - type: object
-                properties:
-                  data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Merge"
-
-    SetMergeResponseOK:
-      description: OK
-      content:
-        application/json:
-          schema:
-            readOnly: true
-            allOf:
-              - $ref: "#/components/schemas/BaseResponse"
-              - type: object
-                properties:
-                  data:
-                    $ref: "#/components/schemas/Merge"
-    GetMergeInitStatusResponseOK:
-      description: OK
-      content:
-        application/json:
-          schema:
-            readOnly: true
-            allOf:
-              - $ref: "#/components/schemas/BaseResponse"
-              - type: object
-                properties:
-                  data:
-                    $ref: "#/components/schemas/MergeStatus"
-    InitMergeResponseOK:
-      description: OK
-      content:
-        application/json:
-          schema:
-            readOnly: true
-            allOf:
-              - $ref: "#/components/schemas/BaseResponse"
-              - type: object
-                properties:
-                  data:
-                    $ref: "#/components/schemas/MergeStatus"
     GetMountsResponseOK:
       description: OK
       content:
@@ -428,44 +297,6 @@ components:
         mount_point:
           type: string
           example: "/DATA"
-    MergeStatus:
-      type: string
-      enum:
-        - "initialized"
-        - "uninitialized"
-        - "error"
-      default: "initialized state"
-      example: "initialized"
-    Merge:
-      type: object
-      required:
-        - mount_point
-      properties:
-        id:
-          type: integer
-          readOnly: true
-        fstype:
-          type: string
-          default: "fuse.mergerfs"
-        mount_point:
-          type: string
-          example: "/DATA"
-        source_base_path:
-          type: string
-          example: "/var/lib/casaos/files"
-        source_volume_uuids:
-          type: array
-          items:
-            type: string
-            example: 5c682e86-cec3-4761-9350-8e1a0c2d1ae9
-        created_at:
-          type: string
-          readOnly: true
-          format: date-time
-        updated_at:
-          type: string
-          readOnly: true
-          format: date-time
 
     Mount:
       type: object
